wordpress/wordpress.svc.yaml
apiVersion: v1
kind: Service
metadata:
 name: wordpress-svc
 namespace: blog
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: wordpress
  type: ClusterIP
